# go-trader

./: .env.example  .gitignore  AGENTS.md  ARBITRAGE.md  CLAUDE.md  DAILY_LEADERBOARD.md  ISSUES.md  LICENSE  PR_TEST.md  README.md  SKILL.md  arb_analyzer.py  arb_memories.json  arb_tracker.py  architecture.md  check_options.py  check_price.py  check_strategy.py  data_fetcher.py  go-trader.service  options_adapter.py  options_risk.py  options_strategies.py  options_trader.py  polymarket_client.py  portfolio_optimizer.py  pyproject.toml  reporter.py  risk_manager.py  run_15m_comparison.py  run_backtest.py  test_arb_system.py
.claude/: settings.json
archive/: backtest_aggressive.py  backtest_moderate.py  exchange_adapter.py  live_trader.py  ml_models.py  run_1h_comparison.py
backtest/: AUDIT.md  THETA_HARVEST_RESULTS.md  auto_suggest.py  backtest_carry_pair.py  backtest_options.py  backtest_pairs.py  backtest_theta.py  backtester.py  consolidation_research.py  consolidation_strategy_sim.py  consolidation_strategy_sweep.py  consolidation_sweep.py  directional_certification.py  eval_windows.py  exit_diagnostics.py  exit_policy_ab.py  fee_audit.py  gross_edge_noise.py  monte_carlo.py  optimizer.py  parity_debug.py  parity_diff.py  regime_bounded_window_validate.py  regime_calibrate.py  regime_diagnostics.py  regime_enriched_features.py  regime_hmm.py  regime_stats.py  regime_vol_model.py  registry_loader.py  reporter.py  run_backtest.py  test_consolidation_research.py  tune_live.py
core/: data_fetcher.py
docs/: ARCHITECTURE.md  POST_UPDATE_HISTORY.md  (+1 more)
scheduler/: db.go  (+291 more)
(+476 files in other folders)
