[project]
name = "go-trader"
version = "0.1.0"
description = "Crypto trading bot — backtesting, paper trading, live trading with risk management"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.37",
    "hyperliquid-python-sdk>=0.4.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "robin-stocks>=3.0.0",
    "pyotp>=2.9.0",
    "yfinance>=0.2.0",
]
